# Classification-and-visualization-of-natural-disasters-using-Twitter

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  Pipfile  README.md  dvc.yaml  params.yaml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  test.py
.dvc/: config
code/: .env.template  Makefile  Pipfile  TwitterAdapter.py  analysis_for_available_data.sync.py  flood_classification.sync.py  main.py  requirements-dev.txt  requirements.txt  tweets.json
code/data/: README.md  annotated_tweets.csv
code/output/: tweets.json
code/scripts/: extract_tweets.py  extract_tweets_for_data.py
code/tests/: test_TweetsPreprocessing.py  test_TwitterAdapter.py
code/twitter/: utils.py
conf/: config.yaml
config/: main.yaml
data/: .gitignore  .ignore  processed.dvc  processed_flood.dvc  processed_geo.dvc  raw.dvc  text_analysis.dvc  tweets.dvc
docker/: Dockerfile  requirements.txt
exploration/: analysis_for_available_data.sync.py  carlos_discrepancy.py  gensim.py  geoparsing.sync.ipynb  geoparsing.sync.py  handling_spam.py  relevant_tweets_inference.sync.ipynb  test.py  visualization.py
exploration/assets/: dashExtensions_default.js
flood_detection/classes/: twitter_facade.py
flood_detection/data/: README.md  extract_tweets_from_api.py  extract_tweets_from_supervisor_data.py  preprocess.py  text_processing.py
flood_detection/examples/: extract_tweets.py  extract_tweets_example.py
flood_detection/notebooks/: analysis_for_available_data.sync.py  flood_classification.sync.py
flood_detection/predict/: extract_location.py  predict_floods.py  text_analysis.py
flood_detection/scripts/: extract_tweets.py  extract_tweets_for_data.py  train.py
flood_detection/tests/: test_TweetsPreprocessing.py  test_TwitterAdapter.py
flood_detection/train/: train.py  train_flood_classifier.py
flood_detection/twitter/: TwitterAdapter.py  utils.py
flood_detection/visualize/: dash_app.py
models/: .gitignore  flood_detection.dvc
notebooks/: analysis_for_available_data.sync.ipynb  analysis_for_available_data.sync.py  file1.csv  flood_classification.sync.ipynb  flood_classification.sync.py  gensim.py  geoparsing.sync.ipynb  geoparsing.sync.py  relevant_tweets_inference.sync.py
notebooks/scripts/: train.py
presentation/: concise_presentation.tex  presentation.tex
presentation/images/: p1.plantuml  p2.plantuml  p3.plantuml
presentation/tex_output/: presentation.aux  presentation.fdb_latexmk  presentation.fls  presentation.nav  presentation.out  presentation.snm  presentation.toc  presentation.vrb
report/: bibliography.bib  main.tex
report/images/: data_collection.plantuml  data_collection_text_classification.plantuml  location_extraction.plantuml  pipeline.plantuml  pipeline_concise.plantuml
report/sections/: abstract.tex  acronyms.tex  appendix.tex  conclusion.tex  discussion_and_further_work.tex  introduction.tex  literature_review.tex  methods.tex  results.tex
src/classes/: twitter_facade.py
src/data/: extract_tweets_from_api.py  extract_tweets_from_supervisor_data.py  preprocess.py
src/examples/: extract_tweets.py
src/predict/: extract_location.py  predict_floods.py
src/train/: train.py  train_flood_classifier.py
src/visualize/: dash_app.py
tests/: test_TweetsPreprocessing.py  test_TwitterFacade.py  test_extract_location.py
(+5 files in other folders)
