[tool.pdm]
distribution = true
[tool.pdm.build]
includes = ["flood_detection"]

[tool.pdm.dev-dependencies]
test = ["pytest>=7.4.2"]
dev = [
  "pytest<8.0.0,>=7.2.0",
  "pandas-stubs<2.0.0.0,>=1.5.1.221024",
  "pre-commit<3.0.0,>=2.20.0",
  "flake8<6.0.0,>=5.0.4",
  "setuptools<66.0.0,>=65.5.0",
  "visidata<3.0.0,>=2.10.2",
]
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
authors = [{ name = "Yasser Kaddoura", email = "yasser.kaddoura19@gmail.com" }]
requires-python = "==3.10.14"
dependencies = [
  "tweepy<5.0.0,>=4.11.0",
  "python-dotenv<1.0.0,>=0.21.0",
  "numpy<2.0.0,>=1.23.4",
  "pandas<2.0.0,>=1.5.1",
  "matplotlib<4.0.0,>=3.6.1",
  "deep-translator<2.0.0,>=1.9.0",
  "transformers<5.0.0,>=4.23.1",
  "boto3<2.0.0,>=1.25.2",
  "spacy<4.0.0,>=3.4.3",
  "dvc<3.0.0,>=2.31.0",
  "hydra-core<2.0.0,>=1.2.0",
  "click<9.0.0,>=8.1.3",
  "tqdm<5.0.0,>=4.64.1",
  "geopy<3.0.0,>=2.2.0",
  "plotly<6.0.0,>=5.10.0",
  "requests<3.0.0,>=2.28.1",
  "dash<3.0.0,>=2.6.2",
  "gensim<5.0.0,>=4.2.0",
  "dvc-gdrive<3.0.0,>=2.19.0",
  "sagemaker<3.0.0,>=2.116.0",
  "datasets[s3]==2.16.1",
  "torch==2.1",
  "imblearn<1.0,>=0.0",
  "dash-leaflet<1.0.0,>=0.1.23",
  "dash-extensions<1.0.0,>=0.1.6",
  "geobuf<2.0.0,>=1.1.1",
  "nltk<4.0,>=3.7",
  "dash-bootstrap-components<2.0.0,>=1.2.1",
  "sentence-transformers",
  "rake-nltk<2.0.0,>=1.0.6",
  "pillow<10.0.0,>=9.3.0",
  "cryptography<39.0.0,>=38.0.3",
  "keybert[gensim]<1.0.0,>=0.7.0",
  "geopandas<1.0.0,>=0.12.1",
  "rtree<2.0.0,>=1.0.1",
  "scikit-learn<2.0.0,>=1.2.1",
  "pip>=23.3.2",
  "scipy==1.10.1",
]
name = "flood-detection"
version = "0.1.0"
description = "Classify flood related text, extract locations, and visualize the results"
readme = "README.md"
license = { text = "MIT" }
